cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(Transform_Point)
find_package(PCL 1.3 REQUIRED COMPONENTS common io visualization)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(Transform_Point Transformation_Points.cpp)
target_link_libraries(Transform_Point ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
